# dominion

./: .gitignore  README.md  homography.py  main.py  pyproject.toml  road_iowa.png.points.csv  trafficdetection.py  trafficmap.py
data/traffic_2.v1i.yolov11/: README.dataset.txt  README.roboflow.txt  data.yaml
data/traffic_2.v1i.yolov11/train/labels/: cedar_day_low_fps_mp4-0088_jpg.rf.0e9c6f74550dbfdad6ff003176b432ee.txt  cedar_day_low_fps_mp4-0148_jpg.rf.d99de0dfeee0e8dfb0a0548e217ed67b.txt  cedar_day_low_fps_mp4-0158_jpg.rf.aeeb3a9c11495867bad0c8fb7c351954.txt  cedar_day_low_fps_mp4-0159_jpg.rf.6da7544e620b022fbc36005442194ef0.txt  cedar_day_low_fps_mp4-0239_jpg.rf.8936d0993bbe2e7a172f156377728db8.txt  cedar_day_low_fps_mp4-0261_jpg.rf.7dde17ef6e931a32da1ccc738e9f30ed.txt  cedar_day_low_fps_mp4-0340_jpg.rf.1eede94f7ca0277c859e810cb9433f33.txt  cedar_day_low_fps_mp4-0384_jpg.rf.c8eb168bedbbf0660910b85affa6ed19.txt  cedar_day_low_fps_mp4-0396_jpg.rf.4336db49a4d162088eb808fae2e286ae.txt  cedar_day_low_fps_mp4-0405_jpg.rf.084192ac7f90c4bf8c723417b96d3b7f.txt  cedar_day_low_fps_mp4-0408_jpg.rf.177b74fb99576414b92ad89046742657.txt  cedar_day_low_fps_mp4-0427_jpg.rf.6fbb9ee422c1a3878b98340845c4403d.txt  cedar_day_low_fps_mp4-0435_jpg.rf.e29d58bdbb46fbf771af787564ec5a98.txt  cedar_day_low_fps_mp4-0474_jpg.rf.bbe4673960b42bbaeb9596ca1fc3744e.txt  cedar_day_low_fps_mp4-0587_jpg.rf.a5458ad7a8d260c75b072665f296effa.txt  cedar_day_low_fps_mp4-0639_jpg.rf.f713ab0dd9bd348b416a436e2fd1be0c.txt  (+29 more)
models/traffic_2.v1i.yolov11/: args.yaml  results.csv
(+15 files in other folders)
