[project]
name = "dominion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "contextily>=1.6.2",
    "lap>=0.5.12",
    "opencv-python>=4.12.0.88",
    "pyproj>=3.6.1",
    "rasterio>=1.4.3",
    "ultralytics>=8.3.240",
]
